--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,24 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.12.0'
 }
 
 group = 'evgen.sh'
 version = '1.0-SNAPSHOT'
+
+allure {
+    report {
+        version.set("2.17.3") //версия Allure Report (https://github.com/allure-framework/allure2)
+    }
+    adapter {
+        aspectjWeaver.set(true) // обработка аннотации @Step
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.17.3") //версия Allure JUnit5 (https://github.com/allure-framework/allure-java)
+            }
+        }
+    }
+}
 
 repositories {
     mavenCentral()
@@ -17,7 +32,8 @@ dependencies {
             'org.junit.jupiter:junit-jupiter',
             'com.codeborne:selenide:7.5.1',
             'org.apache.logging.log4j:log4j-core:2.20.0',
-            'org.slf4j:slf4j-simple:2.0.7'
+            'org.slf4j:slf4j-simple:2.0.7',
+            'io.qameta.allure:allure-selenide:2.29.0'
     )
 }
 
